--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,10 @@ minecraft_version=1.16.1
 yarn_mappings=1.16.1+build.21
 loader_version=0.16.0
 # Mod Properties
-mod_version=0.10.4
+mod_version=0.11.0
 maven_group=me.laysar
 archives_base_name=BastionHelper
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.18.0+build.387-1.16.1
+speedrunapi_version=2.1-1.16.1
